# Fingering-Optimizer

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
include/: Note.h  NoteExtractor.h  Track.h
src/: NoteExtractor.cpp
